# youtube-downloader

./: .gitignore  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
client/: index.html  package.json
client/src/: App.vue  main.ts  router.ts  style.css
client/src/components/: Home.vue  Navbar.vue
server/: .env.example  main.py  pyproject.toml
server/server/: logger.py  settings.py  sign.py
server/server/common/: types.py  utils.py
server/server/usecase/: __init__.py  download_presigned_url.py  prepare_download.py
